--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "md5": "^2.2.1",
     "morgan": "~1.7.0",
     "request": "^2.74.0",
+    "request-promise": "^4.1.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {},
