--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "newblog",
-  "version": "1.0.0",
-  "description": "A basic blog using NodeJS as the backend.",
-  "repository": "N/A",
-  "main": "index.js",
+  "name": "paperairoplane.net",
+  "description": "My personal website",
+  "version": "0.1.0",
+  "author": "Oliver Hookins <ohookins@gmail.com>",
+  "homepage": "https://hookins.name",
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "dateformat": "^1.0.12",
-    "debug": "~2.2.0",
-    "express": "^4.14.0",
-    "jade": "~1.11.0",
-    "marked": "^0.3.6",
-    "md5": "^2.2.1",
-    "morgan": "~1.7.0",
-    "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "serve-favicon": "~2.3.0"
+    "gatsby": "^1.9.199",
+    "gatsby-link": "^1.6.37",
+    "gatsby-plugin-react-helmet": "^2.0.5",
+    "gatsby-source-contentful": "^1.3.38",
+    "gatsby-transformer-remark": "^1.7.37",
+    "react-helmet": "^5.2.0"
   },
-  "devDependencies": {},
-  "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "gatsby-cli": "^1.1.40",
+    "prettier": "^1.10.2"
+  }
 }
