--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Oliver Hookins <ohookins@gmail.com>",
   "homepage": "https://hookins.name",
   "dependencies": {
+    "date-fns": "^1.29.0",
     "gatsby": "^1.9.199",
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-react-helmet": "^2.0.5",
