--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-source-contentful": "^1.3.38",
     "gatsby-transformer-remark": "^1.7.37",
+    "lodash": "^4.17.10",
     "react-helmet": "^5.2.0"
   },
   "scripts": {
