--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-feed": "^2.0.0",
     "gatsby-plugin-react-helmet": "^2.0.0",
     "gatsby-source-contentful": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-transformer-remark": "^2.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
