--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "disqus-react": "^1.0.5",
     "gatsby": "^3.0.0",
     "gatsby-plugin-feed": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-source-contentful": "^5.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-source-contentful": "^5.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
